test/fail/unused-module.mo
import TestModule "unused-module/test-module";

actor {
    TestModule.publicModuleFunction();
};
